--- a/templates/update_phone.html
+++ b/templates/update_phone.html
@@ -17,7 +17,7 @@
         </select>
         <br><br>
 
-        <!-- MODEL (free text) -->
+        <!-- MODEL -->
         <label>Model:</label>
         <input type="text" name="model" value="{{ phone.model }}">
         <br><br>
@@ -60,3 +60,13 @@
 
         <!-- WORKSTATION -->
         <label>Workstation:</label>
+        <input type="text" name="workstation" value="{{ phone.workstation }}">
+        <br><br>
+
+        <button type="submit">Update Phone</button>
+    </form>
+
+    <p><a href="{{ url_for('index') }}">Back to All Phones</a></p>
+
+</body>
+</html>
